<resources>
    <string name="app_name">MentoriApp</string>
    <string name="name_app">Hello MentoriApp!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tablon_value">Buenos dias, como estamos... 123 . abcdefghijklmnopqr</string>
    <string name="tablon_mentor_coordinador">Mentor-Coordinador</string>
    <string name="back_button">icono de retroceder</string>
    <string name="tittle_estadisticas">Estadísticas</string>
    <string name="stat_icon">icno de estadistica\t</string>
    <string name="upload_icon">img de subir archivo\n</string>
    <string name="btn_cargar_datos">Cargar</string>
    <string name="login_background">imagen de fondo del login</string>
    <string name="select_cargo_prompt">Seleccione por cargo</string>
    <string name="change_password_background" />
    <string name="gesti_n_de_horarios">Gestión de Horarios</string>
    <string name="lista_de_sesiones">Lista de Sesiones</string>
    <string name="d_a">Día</string>
    <string name="proponer_horario">Proponer Horario</string>
    <string name="escribe_una_descripci_n">Escribe una descripción...</string>
    <string name="descripci_n">Descripción:</string>
    <string name="lista_de_mentoriados">Lista de mentoriados</string>
    <string name="tema">Tema...</string>
    <string name="s">Tema:</string>
    <string name="cerrar_asistencia">Cerrar Asistencia</string>
    <string name="select_role_label">"Seleccione un rol: "</string>
    <string name="propone_horario">Proponer Horario</string>
    <string name="capturar">para capturar con la camara</string>
</resources>